edit materi done, tinggal download dan nama pdf

--- a/app/src/main/res/drawable/bg_buton.xml
+++ b/app/src/main/res/drawable/bg_buton.xml
@@ -3,6 +3,8 @@
     <solid
         android:color="#FFFFFF"/>
     <stroke
-        android:color="@color/black_overlay"
+        android:color="@color/color1"
         android:width="2dp"/>
+    <corners
+        android:radius="25dp"/>
 </shape>
