--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
     android:background="@drawable/biru"
     android:gravity="center"
     android:fitsSystemWindows="true"
@@ -15,22 +14,24 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="239dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="350dp"
         android:clipToPadding="false"
-        android:gravity="center_vertical"
+        android:gravity="top"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079">
+        app:layout_constraintVertical_bias="0.04000002">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="375dp"
+            android:layout_height="229dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="6dp"
             app:mbn_shadowColor="@color/colors2">
@@ -38,7 +39,7 @@
             <technolifestyle.com.imageslider.FlipperLayout
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:sliderAnimationDuration="600"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
@@ -51,34 +52,30 @@
                 app:sliderIndicatorSelectedColor="#5A5A5A"
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="3"
-                app:sliderStartAutoCycle="true">
-
-                <LinearLayout
-                    android:id="@+id/view1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:padding="10dp" />
-            </technolifestyle.com.imageslider.FlipperLayout>
+                app:sliderStartAutoCycle="true" />
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="391dp"
-        android:layout_height="536dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="280dp"
         android:background="@drawable/bg_login"
         android:foregroundGravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="381dp"
             android:layout_height="156dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="70dp"
             android:clipToPadding="false"
             android:gravity="center"
             android:orientation="horizontal"
@@ -204,6 +201,9 @@
             android:id="@+id/linearLayout2"
             android:layout_width="376dp"
             android:layout_height="151dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:clipToPadding="false"
             android:gravity="center"
             android:orientation="horizontal"
@@ -282,20 +282,23 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:mbn_backgroundBottomColor="#FFFFFF"
-        app:mbn_circleColor="#56B4DF"
-        app:mbn_countBackgroundColor="#ff6f00"
-        app:mbn_countTextColor="@color/color2"
-        app:mbn_selectedIconColor="#3c415e"
-        app:mbn_shadowColor="@color/colors2"
-        tools:layout_editor_absoluteX="10dp" />
+        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="102dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            app:mbn_backgroundBottomColor="#FFFFFF"
+            app:mbn_circleColor="#56B4DF"
+            app:mbn_countBackgroundColor="#ff6f00"
+            app:mbn_countTextColor="@color/color2"
+            app:mbn_selectedIconColor="#3c415e"
+            app:mbn_shadowColor="@color/colors2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
