--- a/app/src/main/res/layout/dashboard_guru.xml
+++ b/app/src/main/res/layout/dashboard_guru.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
     android:background="@drawable/biru"
     android:gravity="center"
     android:id="@+id/ll">
@@ -15,27 +14,30 @@
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="239dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         android:clipToPadding="false"
         android:gravity="top"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16">
+        app:layout_constraintVertical_bias="0.050000012">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="375dp"
+            android:layout_height="229dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="6dp"
             app:mbn_shadowColor="@color/colors2">
 
             <technolifestyle.com.imageslider.FlipperLayout
                 android:id="@+id/imageSlider"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="376dp"
+                android:layout_height="224dp"
                 app:sliderAnimationDuration="600"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
@@ -55,16 +57,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="387dp"
-        android:layout_height="475dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="310dp"
         android:background="@drawable/bg_login"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="381dp"
@@ -106,7 +108,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cercleshapes"
                             android:padding="10dp"
-                            android:src="@drawable/logofix" />
+                            android:src="@drawable/icon_uploadq" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -144,7 +146,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cercleshapes"
                             android:padding="10dp"
-                            android:src="@drawable/logofix" />
+                            android:src="@drawable/icon_editq" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -182,7 +184,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cercleshapes"
                             android:padding="10dp"
-                            android:src="@drawable/logofix" />
+                            android:src="@drawable/icon_uploadm" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -284,7 +286,7 @@
                         android:layout_height="64dp"
                         android:background="@drawable/cercleshapes"
                         android:padding="10dp"
-                        android:src="@drawable/logofix" />
+                        android:src="@drawable/icon_editm" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -303,17 +305,22 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.etebarian.meowbottomnavigation.MeowBottomNavigation
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:layout_marginTop="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:mbn_backgroundBottomColor="#FFFFFF"
         app:mbn_circleColor="#56B4DF"
         app:mbn_countBackgroundColor="#ff6f00"
         app:mbn_countTextColor="@color/color2"
         app:mbn_selectedIconColor="#3c415e"
-        app:mbn_shadowColor="@color/colors2"
-        tools:layout_editor_absoluteX="10dp" />
+        app:mbn_shadowColor="@color/colors2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
