--- a/app/src/main/res/layout/dialogfragment_correct.xml
+++ b/app/src/main/res/layout/dialogfragment_correct.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="440dp"
-        android:background="@drawable/background1">
+        android:background="@drawable/biru"
+        app:layout_constraintCircleRadius="20dp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jawaban Kamu Benar"
-            android:textSize="30sp"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:layout_gravity="center"
+            android:text="JAWABAN BENAR"
+            android:textAlignment="center"
             android:textColor="#fff"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
+            android:textSize="30sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
