--- a/app/src/main/res/layout/edit_materi_list.xml
+++ b/app/src/main/res/layout/edit_materi_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -9,51 +10,49 @@
         app:cardElevation="10dp"
         app:cardCornerRadius="10dp"
         android:layout_margin="5dp"
-        app:cardBackgroundColor="#FFFFFF"
+        android:background="@drawable/bg_edit"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_list">
+
+        <ImageView
+            android:layout_margin="10dp"
+            android:src="@drawable/aljabar"
+            android:id="@+id/imageviewMtrEdt"
+            android:layout_width="120dp"
+            android:layout_height="150dp"/>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:gravity="center"
+            android:id="@+id/goMateriEdit"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Movie Name"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
             <ImageView
-                android:layout_margin="10dp"
-                android:src="@drawable/aljabar"
-                android:id="@+id/imageviewMtrEdt"
-                android:layout_width="120dp"
-                android:layout_height="150dp"/>
-
-            <LinearLayout
-                android:layout_weight="1"
-                android:gravity="center"
-                android:id="@+id/goMateriEdit"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/textName"
-                    android:textColor="#000"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:layout_margin="10dp"
-                    android:text="Movie Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:id="@+id/deleteMtrBab"
-                    android:layout_height="50dp"
-                    android:src="@drawable/delete" />
-
-            </LinearLayout>
+                android:id="@+id/deleteMtrBab"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/delete" />
 
         </LinearLayout>
-
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
