--- a/app/src/main/res/layout/main_single_item_view_edit_quiz.xml
+++ b/app/src/main/res/layout/main_single_item_view_edit_quiz.xml
@@ -6,22 +6,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/biru">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="109dp"
-        android:layout_height="94dp"
-        android:layout_marginStart="148dp"
-        android:src="@drawable/editkuis"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="384dp"
-        android:layout_height="591dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="180dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
