--- a/app/src/main/res/layout/upload_materi.xml
+++ b/app/src/main/res/layout/upload_materi.xml
@@ -6,22 +6,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/biru">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/upload"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="393dp"
-        android:layout_height="642dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="180dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +23,10 @@
             android:id="@+id/editText"
             android:layout_width="380dp"
             android:layout_height="150dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_kuis"
             android:gravity="top|start"
             android:hint="@string/tulis_materi_disini_optional"
@@ -43,6 +35,7 @@
             android:maxLines="10"
             android:minLines="6"
             android:scrollbars="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/isPaidMateri"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etBabMateri" />
@@ -51,42 +44,54 @@
             android:id="@+id/tvHargaMateri"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="44dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="50dp"
             android:text="Harga Materi : "
             android:textSize="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/selectFile"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.078"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/isPaidMateri"
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/etHargaMateri"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_marginTop="108dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="110dp"
             android:background="@drawable/bg_kuis"
             android:hint="Harga Materi"
             android:inputType="text"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.644"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintHorizontal_bias="0.901"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.75" />
 
         <CheckBox
             android:id="@+id/isPaidMateri"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
             android:text="Materi Berbayar"
             app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.061"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText"
-            app:layout_constraintVertical_bias="0.562" />
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
 
         <EditText
             android:id="@+id/etBabMateri"
             android:layout_width="384dp"
             android:layout_height="51dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/bg_kuis"
             android:gravity="center_vertical"
             android:hint="@string/judul_materi"
@@ -97,19 +102,20 @@
             app:layout_constraintHorizontal_bias="0.444"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.148" />
+            app:layout_constraintVertical_bias="0.100000024" />
 
         <Button
             android:id="@+id/selectFile"
             android:layout_width="161dp"
             android:layout_height="49dp"
+            android:layout_marginStart="210dp"
+            android:layout_marginBottom="70dp"
             android:background="@drawable/bg_button"
             android:onClick="pickDocument"
             android:text="@string/select_file"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.969"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText"
             app:layout_constraintVertical_bias="0.645" />
@@ -118,6 +124,7 @@
             android:id="@+id/button5"
             android:layout_width="161dp"
             android:layout_height="49dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/bg_button"
             android:onClick="pushMateri"
             android:text="@string/upload"
