--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -26,7 +26,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="10dp"
             android:lineSpacingExtra="6dp"
             android:text="Bagaimana Pelafalan dari huruf berikut"
             android:textAlignment="center"
@@ -210,7 +210,7 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_edit"
@@ -232,6 +232,7 @@
                 android:textColor="#000" />
 
             <ProgressBar
+                android:visibility="gone"
                 android:id="@+id/loadQuiz"
                 style="?android:attr/indeterminateProgressStyle"
                 android:layout_width="283dp"
