--- a/app/src/main/res/layout/main_single_item_view_edit_quiz.xml
+++ b/app/src/main/res/layout/main_single_item_view_edit_quiz.xml
@@ -10,7 +10,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +26,7 @@
             android:layout_margin="10dp"
             android:text="Pertanyaan : "
             android:textColor="#000"
+            android:textStyle="bold"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -275,38 +276,39 @@
             android:id="@+id/btChangeMedia"
             android:layout_width="155dp"
             android:layout_height="38dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="90dp"
             android:background="@drawable/bg_button"
             android:text="@string/changeMedia"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btSaveEdit"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageOrVoiceEdit"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/imageOrVoiceEdit" />
 
         <Button
             android:id="@+id/btSaveEdit"
             android:layout_width="155dp"
             android:layout_height="38dp"
             android:layout_marginTop="92dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/bg_button"
             android:text="@string/save_question"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.619"
             app:layout_constraintStart_toEndOf="@+id/btChangeMedia"
-            app:layout_constraintTop_toBottomOf="@+id/etCrAnswerEdit"
-            app:layout_constraintVertical_bias="0.477" />
+            app:layout_constraintTop_toBottomOf="@+id/etCrAnswerEdit" />
 
         <Button
             android:id="@+id/btDelQuestion"
             android:layout_width="155dp"
             android:layout_height="38dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/bg_button"
             android:text="@string/delete_question"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.541"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btSaveEdit" />
 
