--- a/app/src/main/res/layout/materi_bab1.xml
+++ b/app/src/main/res/layout/materi_bab1.xml
@@ -12,11 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
+        android:layout_marginBottom="90dp"
         android:gravity="top|start"
-        android:textSize="20sp"
         android:maxLines="20"
         android:minLines="10"
         android:scrollbars="vertical"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/downloadPDF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
