--- a/app/src/main/res/layout/upload_materi.xml
+++ b/app/src/main/res/layout/upload_materi.xml
@@ -10,7 +10,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,18 +59,16 @@
             android:id="@+id/etHargaMateri"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="110dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/bg_kuis"
             android:hint="Harga Materi"
             android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.901"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/isPaidMateri"
