--- a/app/src/main/res/layout/upload_question.xml
+++ b/app/src/main/res/layout/upload_question.xml
@@ -23,7 +23,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/bg_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -177,6 +177,7 @@
             android:id="@+id/etOpt2"
             android:layout_width="170dp"
             android:layout_height="35dp"
+            android:layout_marginBottom="89dp"
             android:background="@drawable/bg_kuis"
             android:gravity="center_vertical"
             android:hint="Jawaban 2"
